# gh-copilot-slides

./: .dockerignore  .gitignore  Dockerfile  README.md  go.mod  pyproject.toml
.github/workflows/: deploy-backend.yml  deploy-frontend.yml  deploy-infra.yml
apps/api/: .env.example  Dockerfile  README.md  pyproject.toml
apps/api/api/: config.py  main.py
apps/api/api/auth/: __init__.py  entra.py
apps/api/api/routes/: health.py  presentations.py  styles.py  templates.py
apps/api/api/storage/: __init__.py  blob.py
apps/web/: .env.example  next.config.js  package.json  tailwind.config.js  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/(auth)/signin/: content.tsx  page.tsx
apps/web/app/(dashboard)/: layout.tsx  page.tsx
apps/web/app/(dashboard)/new/: page.tsx
apps/web/app/(dashboard)/presentations/[id]/: page.tsx
apps/web/components/layout/: header.tsx  sidebar.tsx
apps/web/components/presentations/: builder.tsx  export-options.tsx  progress.tsx  style-picker.tsx  upload-zone.tsx
apps/web/lib/: api.ts  auth.ts
apps/web/types/: next-auth.d.ts
cmd/slides/: convert.go  edit.go  list_styles.go  main.go  new.go  preview.go  research.go
docs/: docs.html  index.html
infra/: main.bicep
infra/modules/: container-apps.bicep  keyvault.bicep  monitoring.bicep  openai.bicep  static-web-app.bicep  storage.bicep
internal/copilot/: client.go
internal/generator/: generator.go  generator_test.go
internal/styles/: styles.go  styles_test.go
slide_mcp/: __init__.py  __main__.py  generator.py  ppt_converter.py  server.py  session.py  utils.py
slide_mcp/agents/: __init__.py  base.py  curator.py  editor.py  orchestrator.py  researcher.py  style_recommender.py
slide_mcp/exporters/: __init__.py  html_exporter.py  pdf_exporter.py  pptx_exporter.py
slide_mcp/llm/: __init__.py  client.py
slide_mcp/styles/: __init__.py
templates/: base.html  preview.html
templates/presets/: bold_signal.json  creative_voltage.json  dark_botanical.json  electric_studio.json  neon_cyber.json  notebook_tabs.json  pastel_geometry.json  split_pastel.json  terminal_green.json  vintage_editorial.json
tests/: conftest.py  test_agents_base.py  test_exporters.py  test_generator.py  test_llm_client.py  test_ppt_converter.py  test_session.py  test_styles.py  test_utils.py
