[project]
name = "slide-builder-mcp"
version = "1.0.0"
description = "MCP server for creating stunning HTML presentations — ported from frontend-slides"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "python-pptx>=1.0.2",
    "jinja2>=3.1.4",
    "pydantic>=2.10.0",
]

[project.scripts]
slide-builder-mcp = "slide_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["slide_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
