[project]
name = "slide-builder-mcp"
version = "2.0.0"
description = "MCP server and AI agent team for creating stunning HTML/PPTX/PDF presentations"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0,<2",
    "python-pptx>=1.0.2,<2",
    "jinja2>=3.1.4,<4",
    "httpx>=0.27.0,<1",
    "beautifulsoup4>=4.12.0,<5",
    "trafilatura>=1.12.0,<2",
    "duckduckgo-search>=6.0.0,<8",
]

[project.optional-dependencies]
research = [
    "pymupdf>=1.24.0,<2",
    "python-docx>=1.1.0,<2",
]
pdf = [
    "playwright>=1.45.0,<2",
]
test = [
    "pytest>=8.0,<9",
    "pytest-cov>=5.0,<6",
]
all = [
    "slide-builder-mcp[research,pdf,test]",
]

[project.scripts]
slide-builder-mcp = "slide_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["slide_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
